--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,5 +47,8 @@ tokio = { version = "1", features = [
     "time",
 ] }
 
+[build-dependencies]
+sloughi = "0.3"
+
 [dev-dependencies]
 tempfile = "3.10"
