chore(license): update LICENSE

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "cargo-plugin-utils"
 description = "Shared utilities for cargo plugins (logger, subprocess handling, common functions)"
 version = "0.0.1"
 edition = "2024"
-license = "MIT"
+license-file = "LICENSE"
 keywords = ["cargo", "plugin", "utilities", "logger", "cli"]
 categories = ["command-line-utilities", "development-tools"]
 readme = "README.md"
