ci(test): run tests with --test-threads=1 to fix PTY concurrency issues
PTY operations are not thread-safe and can hang when

tests run in parallel. This change ensures all tests run

sequentially, which is required for PTY-based subprocess tests.

This applies to all platforms, not just Windows, to ensure

consistent test behavior.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,9 @@ jobs:
           path: target
           key: ${{ runner.os }}-${{ matrix.rust }}-target-test-${{ hashFiles('**/Cargo.lock') }}
       - name: Run tests
-        run: cargo test
+        run: cargo test -- --test-threads=1
+        # PTY tests require single-threaded execution to avoid concurrency issues
+        # This applies to all platforms to ensure consistent test behavior
       - name: Run doc tests
         shell: bash
         run: |
