fix(package): use HTTPS URL for repository field
crates.io requires HTTP/HTTPS URLs, not SSH URLs.

Change repository URL from git@github.com format to

https://github.com format.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ keywords = ["cargo", "plugin", "utilities", "logger", "cli"]
 categories = ["command-line-utilities", "development-tools"]
 readme = "README.md"
 authors = ["Jacobus Geluk <jacobus@dataroad.com>"]
-repository = "git@github.com:dataroadinc/cargo-plugin-utils.git"
+repository = "https://github.com/dataroadinc/cargo-plugin-utils"
 documentation = "https://docs.rs/cargo-plugin-utils"
 homepage = "https://github.com/dataroadinc/cargo-plugin-utils"
 rust-version = "1.92.0"
